@startuml

title __CS_WP4_GRUPPO10's Class Diagram__\n

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.ContactMessage {
    }
  }
  

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.HA {
    }
  }
  

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.HAToken {
    }
  }
  

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.MD {
    }
  }
  

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.MainSimulation {
    }
  }
  

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.PkfCommitment {
    }
  }
  

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.User {
    }
  }
  

  namespace it.unisa.diem.cs.gruppo10 {
    class it.unisa.diem.cs.gruppo10.Util {
    }
  }
  

  it.unisa.diem.cs.gruppo10.ContactMessage .up.|> java.io.Serializable
  it.unisa.diem.cs.gruppo10.HA o-- it.unisa.diem.cs.gruppo10.MD : md
  it.unisa.diem.cs.gruppo10.HAToken .up.|> java.io.Serializable
  it.unisa.diem.cs.gruppo10.PkfCommitment .up.|> java.io.Serializable
  it.unisa.diem.cs.gruppo10.User o-- it.unisa.diem.cs.gruppo10.PkfCommitment : com


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
